<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="content_text">Google officially announced its much-anticipated Pixel phones; the Pixel and Pixel XL, on October 4. We attended Google’s London UK event, mirroring the main one taking place in San Francisco, US, where the firm unwrapped the new Android 7.1 Nougat devices which will apparently usurp Google’s long-standing Nexus series.</string>
    <string name="content_specs_display">5.0 inchs\n
        FHD AMOLED at 44lppi\n
        2.5D Corning@ Glass 4
    </string>
    <string name="content_specs_battery">2,770 mAh battery\n
    Standby time (LTE): up to 19 days\n
    Talk time (3g/WCMDA): up to 13 hours\n
    Internet use time (LTE): up to 13 hours\n
    Video playback: up to 13 hours\n
    Audio playback (via headset): up to 110 hours\n
    Fst chargin: up to 7 hours of use from only 15 minutes of charging</string>
    <string name="dummy_photo">6 Photo</string>
    <string name="dummy_value">$737</string>
    <string name="stock">Stock hanya 5 buah</string>
    <string name="spesification">Spesifikasi</string>
    <string name="display">Display</string>
    <string name="battery">Battery</string>
    <string name="seller">Dijual oleh</string>
    <string name="my_name">Maulana Ahmad</string>
    <string name="buy">Beli</string>
</resources>
